# chat

./: Cargo.toml  README.md  flake.nix
crates/chat_backend/: Cargo.toml
crates/chat_backend/data/: config.toml
crates/chat_backend/src/: client_command.rs  client_event.rs  connection.rs  lib.rs  ui_server_state.rs  ui_state.rs
crates/chat_server/: Cargo.toml
crates/chat_server/data/: config.toml
crates/chat_server/src/: main.rs  utils.rs
crates/chat_server/src/init/: ca_certs.rs  certs.rs  config.rs  mod.rs  pki.rs  server_certs.rs
crates/chat_server/src/run/: connection.rs  listener.rs  mod.rs  server_state.rs
crates/chat_server/src/run/connection/: guard.rs  mod.rs
crates/network_protocol/: Cargo.toml
crates/network_protocol/src/: codecs.rs  items.proto  lib.rs  network_command.rs  network_event.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: items.proto  lib.rs  network_command.rs
crates/ratatui_frontend/: Cargo.toml
crates/ratatui_frontend/data/: config.toml
crates/ratatui_frontend/src/: connection_state.rs  main.rs  ui_server_state.rs
crates/ratatui_frontend/src/ui/: focus.rs  messages.rs  mod.rs  popup.rs  sidebar.rs
crates/ratatui_frontend/src/ui/main_panel/: focus.rs  messages.rs  mod.rs  sidebar.rs
crates/ratatui_frontend/src/ui/main_panel/sidebar/: channel_list.rs  connection_status.rs  mod.rs  user_list.rs
crates/ratatui_frontend/src/ui/popups/: commands.rs  connect.rs  mod.rs  notice.rs  quit.rs  update_info.rs
crates/shared_utils/: Cargo.toml
crates/shared_utils/src/: files.rs  lib.rs  macros.rs  strings.rs
