[workspace]
resolver = "3"
members = [ "crates/*" ]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
needless_pass_by_value = "allow"
new_without_default = "allow"

[workspace.dependencies]
bytes = "1"
color-eyre = "0.6"
futures = "0.3"
prost = "0.14"
ratatui = "0.29"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

chat_backend = { path = "./crates/chat_backend/" }
protocol = { path = "./crates/protocol/" }
