[workspace]
resolver = "3"
members = [ "crates/*" ]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
undocumented_unsafe_blocks = "warn"
needless_pass_by_value = "allow"
new_without_default = "allow"
explicit_iter_loop = "allow"
needless_continue = "allow"

[workspace.dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
dashmap = "6"
directories = "6"
figment = { version = "0.10", features = ["env", "toml"] }
futures = "0.3"
prost = "0.14"
rcgen = { version = "0.14", features = ["x509-parser"] }
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
tempfile = "3.2.7"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-rustls = "0.26"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["codec", "rt"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v7"] }
webpki-roots = { version = "1" }

chat_backend = { path = "./crates/chat_backend/" }
network_protocol = { path = "./crates/network_protocol/", features = ["serde"] }
shared_utils = { path = "./crates/shared_utils/" }
