[package]
name = "chat_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { workspace = true }
network_protocol = { workspace = true }
rustls = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
webpki-roots = { workspace = true }

[lints]
workspace = true
