[package]
name = "chat_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
webpki-roots = { workspace = true }

network_protocol = { workspace = true }
shared_utils = { workspace = true }

[lints]
workspace = true
