[package]
name = "chat_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
directories = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }

network_protocol = { workspace = true }

[lints]
workspace = true
