[package]
name = "chat_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
figment = { workspace = true }
futures = { workspace = true }
directories = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true }

zeroize = "1"

network_protocol = { workspace = true }
shared_utils = { workspace = true }

[lints]
workspace = true
