[package]
name = "ratatui_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true }
crossterm = { version = "0.29", features = ["event-stream"] }
futures = { workspace = true }
ratatui = "0.30"
textwrap = "0.16"
thiserror = { workspace = true }
tokio = { workspace = true }
tui-textarea-2 = "0.11"

chat_backend = { workspace = true }
shared_utils = { workspace = true }
