[package]
name = "ratatui_frontend"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
crossterm = { version = "0.29", features = ["event-stream"] }
figment = { workspace = true }
futures = { workspace = true }
ratatui = "0.30"
ratatui-textarea = "0.9"
serde = { workspace = true }
textwrap = "0.16"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }

chat_backend = { workspace = true }
shared_utils = { workspace = true }
